# ohtu_mini_projekti

./: ..coveragerc.swp  ..gitignore.swp  .gitignore  .poetry.lock.swp  .pylintrc  README.md  app.py  log.html  output.xml  pyproject.toml  report.html  run_robot_tests.sh  testi.json
.github/workflows/: main.yml
src/: app.py  bibtex_generator.py  index.py  json_saver.py  testi.json
src/references/: book.py  reference_bank.py  reference_type_bank.py  reference_types.json
src/templates/: base.html  print_bibtex.html  print_doc.html  reference_types_add.html
src/tests/: bibtex_generator_test.py  home.robot  reference.robot  resource.robot
src/tests/json_saver_tests/: json_saver_test.py
src/tests/references_tests/: reference_bank_test.py  reference_type_bank.py  reference_type_bank_test.py
templates/: base.html  print_bibtex.html  print_doc.html
