[tool.poetry]
name = "ohtu_mini_projekti"
version = "0.1.0"
description = ""
authors = ["MatiasSinisalo", "KilpiV", "Borna", "mfk99", "Gaberol"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
robotframework-seleniumlibrary = "^6.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
